objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Nature_du_premier_contact__c</fullName>
        <inlineHelpText>décrit le canal technique d’arrivée de la fiche piste dans le système</inlineHelpText>
        <label>Canal d&apos;acquisition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adwords</fullName>
                </value>
                <value>
                    <fullName>Agent commercial</fullName>
                </value>
                <value>
                    <fullName>Appel d’offre</fullName>
                </value>
                <value>
                    <fullName>Appel ou Email entrant</fullName>
                </value>
                <value>
                    <fullName>Application mobile</fullName>
                </value>
                <value>
                    <fullName>Apport Professeur/Intervenant</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Campus Day virtuel</fullName>
                </value>
                <value>
                    <fullName>Directories/ Guides</fullName>
                </value>
                <value>
                    <fullName>Display/ Banners</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Emailing Externe</fullName>
                </value>
                <value>
                    <fullName>Evénement/ Conférence</fullName>
                </value>
                <value>
                    <fullName>Fichiers externes</fullName>
                </value>
                <value>
                    <fullName>Foisonnement</fullName>
                </value>
                <value>
                    <fullName>Forum/ Salon</fullName>
                </value>
                <value>
                    <fullName>Import contacts</fullName>
                </value>
                <value>
                    <fullName>Master class</fullName>
                </value>
                <value>
                    <fullName>Module Chat</fullName>
                </value>
                <value>
                    <fullName>Open class</fullName>
                </value>
                <value>
                    <fullName>Prescripteurs</fullName>
                </value>
                <value>
                    <fullName>Présentation aux écoles/ universités</fullName>
                </value>
                <value>
                    <fullName>Présentation étudiants</fullName>
                </value>
                <value>
                    <fullName>Prospection</fullName>
                </value>
                <value>
                    <fullName>Récurrence</fullName>
                </value>
                <value>
                    <fullName>Réseaux sociaux</fullName>
                </value>
                <value>
                    <fullName>Réunion d&apos;information France</fullName>
                </value>
                <value>
                    <fullName>Réunion d&apos;information Internationale</fullName>
                </value>
                <value>
                    <fullName>Salon virtuel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nb_Opportunites_actives__c</fullName>
        <label>Nb Opportunités actives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_car_Nom__c</fullName>
        <description>Nb de caractères du nom pour des besoins de détections d&apos;anomalies</description>
        <formula>LEN( LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nb car Nom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_jours_depuis_Creation_Contact__c</fullName>
        <description>Resitue le nombre de jours écoulés depuis la création du contact. Utilisé pour les filtres dans les rapports.</description>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Resitue le nombre de jours écoulés depuis la création du contact. Utilisé pour les filtres dans les rapports.</inlineHelpText>
        <label>Nb jours depuis Création Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_jours_depuis_modification_Contact__c</fullName>
        <description>Resitue le nombre de jours écoulés depuis la dernière modification du contact. Utilisé pour les filtres dans les rapports.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Resitue le nombre de jours écoulés depuis la dernière modification du contact. Utilisé pour les filtres dans les rapports.</inlineHelpText>
        <label>Nb jours depuis modification Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ne_pas_appeler_sur_professionnel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ne pas appeler sur professionnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ne_pas_contacter_PartenariatFundraisin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ne pas contacter Partenariat/Fundraising</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ne_pas_contacter_par_mail_TA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ne pas contacter par mail TA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ne_pas_contacter_par_t_l_phone_TA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ne pas contacter par téléphone TA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ne_souhaite_pas_recevoir_de_courrier_TA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ne souhaite pas recevoir de courrier TA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_Forever__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter Forever</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Niveau_d_anglais__c</fullName>
        <label>Niveau d&apos;anglais</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bon</fullName>
                </value>
                <value>
                    <fullName>Moyen</fullName>
                </value>
                <value>
                    <fullName>Faible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Niveau_d_exp_rience__c</fullName>
        <label>Niveau d&apos;expérience professionnelle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-2 ans</fullName>
                </value>
                <value>
                    <fullName>3-5 ans</fullName>
                </value>
                <value>
                    <fullName>5-10 ans</fullName>
                </value>
                <value>
                    <fullName>6-10 ans</fullName>
                </value>
                <value>
                    <fullName>10-15 ans</fullName>
                </value>
                <value>
                    <fullName>15-20 ans</fullName>
                </value>
                <value>
                    <fullName>20-25 ans</fullName>
                </value>
                <value>
                    <fullName>+ de 10 ans</fullName>
                </value>
                <value>
                    <fullName>11-15 ans</fullName>
                </value>
                <value>
                    <fullName>16-20 ans</fullName>
                </value>
                <value>
                    <fullName>21-25 ans</fullName>
                </value>
                <value>
                    <fullName>+ de 25 ans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Niveau_d_tudes__c</fullName>
        <label>Niveau d&apos;études</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconde</fullName>
                </value>
                <value>
                    <fullName>Première</fullName>
                </value>
                <value>
                    <fullName>Terminale</fullName>
                </value>
                <value>
                    <fullName>Bac</fullName>
                </value>
                <value>
                    <fullName>Bac + 1</fullName>
                </value>
                <value>
                    <fullName>Bac + 2</fullName>
                </value>
                <value>
                    <fullName>Bac + 3</fullName>
                </value>
                <value>
                    <fullName>Bac + 4</fullName>
                </value>
                <value>
                    <fullName>Bac + 5 et +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Niveau_de_fran_ais__c</fullName>
        <label>Niveau de français</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bon</fullName>
                </value>
                <value>
                    <fullName>Moyen</fullName>
                </value>
                <value>
                    <fullName>Faible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Niveau_detudes_numero__c</fullName>
        <formula>CASE(TEXT(Niveau_d_tudes__c),
&apos;Seconde&apos;,7,
&apos;Première&apos;,8,
&apos;Terminale&apos;,9,
&apos;Bac&apos;,10,
&apos;Bac + 1&apos;,20,
&apos;Bac + 2&apos;,30,
&apos;Bac + 3&apos;,40,
&apos;Bac + 4&apos;,50,
&apos;Bac + 5 et +&apos;,60,
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Niveau d&apos;études numéro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Niveau_xp_pro_num_ro__c</fullName>
        <formula>CASE(TEXT( Niveau_d_exp_rience__c), 
&apos;0-2 ans&apos;,10, 
&apos;3-5 ans&apos;,20, 
&apos;6-10 ans&apos;,30, 
&apos;+ de 10 ans&apos;,40, 
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Niveau xp pro numéro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nom_Compte__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nom Compte Formule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom_Prenom__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, LastName &amp; &quot; &quot; &amp; FirstName,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nom Prénom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom_de_la_jeune_fille__c</fullName>
        <label>Nom de jeune fille</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_opportunit_s__c</fullName>
        <label>Nombre d&apos;opportunités total</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_opportunites_sur_criteres__c</fullName>
        <label>Nombre d&apos;opportunités en cours</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunite_Statut_Candidature_CANEL__c</fullName>
        <label>Opportunité-Statut Candidature CANEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunite_Statut_Dossier_CANEL__c</fullName>
        <label>Opportunité-Statut Dossier CANEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Particule__c</fullName>
        <label>Particule</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pays__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse:Pays</label>
        <referenceTo>Pays__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pays_de_r_sidence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pays de résidence</label>
        <referenceTo>Pays__c</referenceTo>
        <relationshipLabel>Contacts (Pays de résidence)</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pr_sent_Campus_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Présent Campus Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pr_sent_Training_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Présent Training Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Present_Salon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Présent Salon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Programme_de_reconnaissance__c</fullName>
        <label>Programme de reconnaissance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2C_Niveau Zéro</fullName>
                </value>
                <value>
                    <fullName>B2B_Mont Blanc</fullName>
                </value>
                <value>
                    <fullName>B2C_Mont Blanc</fullName>
                </value>
                <value>
                    <fullName>B2B_Kilimandjaro</fullName>
                </value>
                <value>
                    <fullName>B2C_Kilimandjaro</fullName>
                </value>
                <value>
                    <fullName>B2B_McKinley</fullName>
                </value>
                <value>
                    <fullName>B2C_McKinley</fullName>
                </value>
                <value>
                    <fullName>B2B_Annapura</fullName>
                </value>
                <value>
                    <fullName>B2C_Annapura</fullName>
                </value>
                <value>
                    <fullName>B2B_K2</fullName>
                </value>
                <value>
                    <fullName>B2C_K2</fullName>
                </value>
                <value>
                    <fullName>B2B_Everest</fullName>
                </value>
                <value>
                    <fullName>B2C_Everest</fullName>
                </value>
                <value>
                    <fullName>B2B_Cercle du Président</fullName>
                </value>
                <value>
                    <fullName>B2C_Cercle du Président</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pyramide__c</fullName>
        <label>Pyramide</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EVIP</fullName>
                </value>
                <value>
                    <fullName>Cœur 600</fullName>
                </value>
                <value>
                    <fullName>Cœur</fullName>
                </value>
                <value>
                    <fullName>Platine</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_gion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Région</label>
        <referenceTo>D_partement__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_le__c</fullName>
        <label>Rôle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Association étudiant</fullName>
                </value>
                <value>
                    <fullName>Délégué de promo</fullName>
                </value>
                <value>
                    <fullName>Correspondant</fullName>
                </value>
                <value>
                    <fullName>Président club</fullName>
                </value>
                <value>
                    <fullName>Administrateur ADEM</fullName>
                </value>
                <value>
                    <fullName>Intervenant témoin</fullName>
                </value>
                <value>
                    <fullName>Prestataire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_le_taxe__c</fullName>
        <label>Rôle Taxe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Décisionnaire versement Taxe</fullName>
                </value>
                <value>
                    <fullName>Gestionnaire versement Taxe</fullName>
                </value>
                <value>
                    <fullName>Prescripteur fond libre collecteur</fullName>
                </value>
                <value>
                    <fullName>Prescripteur versement Taxe</fullName>
                </value>
                <value>
                    <fullName>Remerciement Taxe DG à Président</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_muneration__c</fullName>
        <label>Rémunération Initiale (€)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R_muneration_actuelle__c</fullName>
        <label>Rémuneration actuelle (€)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reconduction_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Souhaite rester en contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Copy of Record Type Name value for Validation Rule</description>
        <formula>$RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recu_ERP_Participant__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Champ qui sera rempli par le web service EMLYON pour définir les contacts participant à envoyer vers à AGRESSO</description>
        <label>Recu ERP Participant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recu_ERP_Tiers__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Champ qui sera rempli par le web service EMLYON pour définir les contacts tiers à envoyer vers à AGRESSO</description>
        <label>Recu ERP Tiers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retrait__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retraité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_EML_Prescripteur_potentiel__c</fullName>
        <description>Champ technique permettant un comptage sur la liste liée Rôle EMLyon, pour les Rôles EMLyon dont la checkbox &quot;Rôle de prescripteur potentiel&quot; est cochée. Permet de voir si un Contact a un Rôle EMLyon correspondant à la Catégorie &quot;EML-EXEC&quot; et au Liste rôle &quot;Prescripteur potentiel&quot;. 
Utilisé dans le process builder &quot;Création automatique d&apos;un nouveau rôle EM Lyon&quot;.</description>
        <label>Rôle EML Prescripteur potentiel</label>
        <summaryFilterItems>
            <field>R_le__c.Role_de_prescripteur_potentiel__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>R_le__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score_Toefl__c</fullName>
        <label>Score d&apos;Anglais</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Toeic__c</fullName>
        <label>Score management</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Somme_Montant_Don__c</fullName>
        <label>Total généré don</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Souhait_programme__c</fullName>
        <description>Champ alimenté depuis l&apos;opportunité</description>
        <inlineHelpText>Champ alimenté depuis l&apos;opportunité</inlineHelpText>
        <label>Souhait programme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sous__c</fullName>
        <label>Sous origine de la piste</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statut_Fundraising__c</fullName>
        <label>Statut Fundraising</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identifié</fullName>
                </value>
                <value>
                    <fullName>Informé</fullName>
                </value>
                <value>
                    <fullName>Donateur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect Etudiant</fullName>
                </value>
                <value>
                    <fullName>Etudiant</fullName>
                </value>
                <value>
                    <fullName>Professionnel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_External_Id__c</fullName>
        <description>Champ technique qui contient la copie de l&apos;Id de l&apos;enregistrement 
en production</description>
        <externalId>true</externalId>
        <label>TECH_External_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_lecopie_domicile__c</fullName>
        <label>Télécopie domicile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_d_Anglais__c</fullName>
        <label>Test d&apos;Anglais</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOEFL ibt</fullName>
                </value>
                <value>
                    <fullName>TOEFL computer</fullName>
                </value>
                <value>
                    <fullName>TOEFL papier</fullName>
                </value>
                <value>
                    <fullName>TOEIC Listening and Reading</fullName>
                </value>
                <value>
                    <fullName>TOEIC Speaking and Writing</fullName>
                </value>
                <value>
                    <fullName>IELTS</fullName>
                </value>
                <value>
                    <fullName>PTE</fullName>
                </value>
                <value>
                    <fullName>Cambridge First Certificate (FCE)</fullName>
                </value>
                <value>
                    <fullName>Cambridge Advanced (CAE)</fullName>
                </value>
                <value>
                    <fullName>Cambridge Proficiency (CPE)</fullName>
                </value>
                <value>
                    <fullName>BULATS</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Exempté</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_management__c</fullName>
        <label>Test management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TAGE Post-Bac</fullName>
                </value>
                <value>
                    <fullName>TAGE 2</fullName>
                </value>
                <value>
                    <fullName>TAGE MAGE</fullName>
                </value>
                <value>
                    <fullName>GMAT</fullName>
                </value>
                <value>
                    <fullName>GRE</fullName>
                </value>
                <value>
                    <fullName>CAT</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Exempté</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traite_par_teleconseiller_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Traité par téléconseiller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tranche_de_r_mun_ration__c</fullName>
        <label>Tranche de rémunération</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Moins de 30K€</fullName>
                </value>
                <value>
                    <fullName>De 31 à 40K€</fullName>
                </value>
                <value>
                    <fullName>De 41 à 50K€</fullName>
                </value>
                <value>
                    <fullName>De 51 à 60K€</fullName>
                </value>
                <value>
                    <fullName>De 61 à 70K€</fullName>
                </value>
                <value>
                    <fullName>De 71 à 80K€</fullName>
                </value>
                <value>
                    <fullName>De 81 à 90K€</fullName>
                </value>
                <value>
                    <fullName>De 91 à 100K€</fullName>
                </value>
                <value>
                    <fullName>Plus de 101K€</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type donation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campagne</fullName>
                </value>
                <value>
                    <fullName>ISF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_d_enregistrement_Piste__c</fullName>
        <description>Ce champ est utilisé dans le cadre du ticket EML 1671. Il permet d&apos;affecter les Pistes à un Type d&apos;enregistrement Contact spécifique (Professionnel en l&apos;occurrence).</description>
        <label>Type d&apos;enregistrement (Piste)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Viadeo__c</fullName>
        <label>Viadeo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <formula>IMAGE( IF(NPAI_Personnel__c = True , &quot;/img/samples/flag_red.gif&quot;,&quot;&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statut NPAI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18caracter__c</fullName>
        <description>Id contact sur 18 caractères</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Id contact sur 18 caractères</inlineHelpText>
        <label>18caracter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Commentaire_Fundraising__c</fullName>
        <label>Zone Commentaire Fundraising</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zone_Commentaire__c</fullName>
        <label>Zone Commentaire</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>inx__custom_boolean_value_00__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Boolean Value 00</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__custom_boolean_value_01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Boolean Value 01</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__custom_boolean_value_02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Boolean Value 02</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__custom_date_value_00__c</fullName>
        <label>Custom Date Value 00</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inx__custom_date_value_01__c</fullName>
        <label>Custom Date Value 01</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inx__custom_date_value_02__c</fullName>
        <label>Custom Date Value 02</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inx__custom_float_value_00__c</fullName>
        <label>Custom Float Value 00</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_float_value_01__c</fullName>
        <label>Custom Float Value 01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_float_value_02__c</fullName>
        <label>Custom Float Value 02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_integer_value_00__c</fullName>
        <label>Custom Integer Value 00</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_integer_value_01__c</fullName>
        <label>Custom Integer Value 01</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_integer_value_02__c</fullName>
        <label>Custom Integer Value 02</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_text_value_00__c</fullName>
        <label>Custom Text Value 00</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inx__custom_text_value_01__c</fullName>
        <label>Custom Text Value 01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inx__custom_text_value_02__c</fullName>
        <label>Custom Text Value 02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inx__email_is_invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hardbounce from Inxmail Professional</description>
        <inlineHelpText>Hardbounce dans Inxmail Professional</inlineHelpText>
        <label>Email Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__recipient_id__c</fullName>
        <description>internal field: Recipient ID from Inxmail Professional</description>
        <externalId>true</externalId>
        <label>Recipient ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>